docs/api/qiskit/0.37/qiskit.circuit.CircuitInstruction.mdx
---
title: CircuitInstruction (v0.37)
description: API reference for qiskit.circuit.CircuitInstruction in qiskit v0.37
in_page_toc_min_heading_level: 1
python_api_type: class
python_api_name: qiskit.circuit.CircuitInstruction
---

# CircuitInstruction

<Class id="qiskit.circuit.CircuitInstruction" isDedicatedPage={true} github="https://github.com/qiskit/qiskit/tree/stable/0.21/qiskit/circuit/quantumcircuitdata.py" signature="CircuitInstruction(operation, qubits=(), clbits=())" modifiers="class">
  Bases: `object`

  A single instruction in a [`QuantumCircuit`](qiskit.circuit.QuantumCircuit "qiskit.circuit.QuantumCircuit"), comprised of the [`operation`](#qiskit.circuit.CircuitInstruction.operation "qiskit.circuit.CircuitInstruction.operation") and various operands.

  <Admonition title="Warning" type="caution">
    This is a lightweight internal class and there is minimal error checking; you must respect the type hints when using it. It is the user’s responsibility to ensure that direct mutations of the object do not invalidate the types, nor the restrictions placed on it by its context. Typically this will mean, for example, that [`qubits`](#qiskit.circuit.CircuitInstruction.qubits "qiskit.circuit.CircuitInstruction.qubits") must be a sequence of distinct items, with no duplicates.
  </Admonition>

  ## Methods

  <span id="qiskit-circuit-circuitinstruction-copy" />

  ### copy

  <Function id="qiskit.circuit.CircuitInstruction.copy" signature="CircuitInstruction.copy()">
    Return a shallow copy of the [`CircuitInstruction`](qiskit.circuit.CircuitInstruction "qiskit.circuit.CircuitInstruction").

    **Return type**

    [`CircuitInstruction`](qiskit.circuit.CircuitInstruction "qiskit.circuit.quantumcircuitdata.CircuitInstruction")
  </Function>

  <span id="qiskit-circuit-circuitinstruction-replace" />

  ### replace

  <Function id="qiskit.circuit.CircuitInstruction.replace" signature="CircuitInstruction.replace(operation=None, qubits=None, clbits=None)">
    Return a new [`CircuitInstruction`](qiskit.circuit.CircuitInstruction "qiskit.circuit.CircuitInstruction") with the given fields replaced.

    **Return type**

    [`CircuitInstruction`](qiskit.circuit.CircuitInstruction "qiskit.circuit.quantumcircuitdata.CircuitInstruction")
  </Function>

  ## Attributes

  ### operation

  <Attribute id="qiskit.circuit.CircuitInstruction.operation" attributeTypeHint="qiskit.circuit.instruction.Instruction">
    The logical operation that this instruction represents an execution of.
  </Attribute>

  ### qubits

  <Attribute id="qiskit.circuit.CircuitInstruction.qubits" attributeTypeHint="Tuple[qiskit.circuit.quantumregister.Qubit, ...]">
    A sequence of the qubits that the operation is applied to.
  </Attribute>

  ### clbits

  <Attribute id="qiskit.circuit.CircuitInstruction.clbits" attributeTypeHint="Tuple[qiskit.circuit.classicalregister.Clbit, ...]">
    A sequence of the classical bits that this operation reads from or writes to.
  </Attribute>
</Class>

